Modify landing page description

--- a/views/pages/project-content.pug
+++ b/views/pages/project-content.pug
@@ -31,8 +31,8 @@ section#projects
                 height="auto")
             .product-page-title.project-title Product Landing Page
             p.product-page-description.project-description
-                | A basic simple product landing page that shares 2 variety types
-                | of a particular product with their information, and prices indicated
+                | A simple product landing page that showcases two varieties of a
+                | product, each with its brief distinct information, and prices indicated
                 | are based on their weight.
                 br
                 a.description-link(href="https://worldhail.github.io/sample-product-landing-page/" target="_blank") Try it!
