--- a/docs/scss/project.scss
+++ b/docs/scss/project.scss
@@ -146,5 +146,9 @@
     .project-grid-content {
         grid-template-columns: 1fr 1fr 1fr;
     }
+
+    #projects {
+        padding-top: 70px;
+    }
 }
 
