--- a/docs/css/layout.css
+++ b/docs/css/layout.css
@@ -40,6 +40,17 @@ header {
   width: 70px;
   height: 29px;
 }
+.logo-container ::before {
+  content: "";
+  position: absolute;
+  width: 3px;
+  height: 3px;
+  right: 32%;
+  top: 1px;
+  border-radius: 50%;
+  opacity: 0;
+  transition: 0.7s;
+}
 .logo-container:hover {
   cursor: pointer;
 }
@@ -202,23 +213,35 @@ footer {
 }
 @media screen and (min-width: 992px) {
   header {
-    min-height: 70px;
+    min-height: 100px;
     box-shadow: none;
+    transition: 1s;
   }
   header:hover .logo-container {
     position: relative;
     transform: translateY(-5px);
     transition: 0.7s;
   }
+  header:hover .logo-container ::before {
+    opacity: 1;
+    background-color: #00d70e;
+    transform: scale(1.5);
+  }
   header:not(:hover) .logo-container {
     transition: 0.8s 0.2s;
   }
+  header:not(:hover) .logo-container ::before {
+    opacity: 1;
+    transition: 0.7s 0.5;
+  }
   nav {
     width: 478.484px;
-    height: 70px;
+    height: 100px;
+    margin-right: 50px;
     position: fixed;
     right: 5%;
     z-index: 2;
+    transition: 1s;
   }
   .hidden-overlay {
     display: none;
@@ -241,9 +264,9 @@ footer {
     transform: none;
   }
   .ul-wrapper {
+    display: flex;
     position: initial;
     width: auto;
-    height: auto;
     padding-top: 0;
     background-color: transparent;
   }
@@ -253,6 +276,7 @@ footer {
   .categories {
     display: flex;
     transform: none;
+    align-self: center;
   }
   .categories a {
     color: rgb(34, 34, 34);
@@ -266,6 +290,7 @@ footer {
     transition: 0.4s 0.1s;
   }
   .logo-container {
+    margin-left: 50px;
     scale: 1.2;
   }
 }/*# sourceMappingURL=layout.css.map */
