--- a/docs/css/skills.css
+++ b/docs/css/skills.css
@@ -39,7 +39,7 @@
 
 @media screen and (min-width: 768px) {
   .web-skills {
-    padding: 70px 8%;
+    padding: 100px 8% 70px;
   }
   .web-skills h1 {
     font-size: 55px;
