--- a/docs/scss/layout.scss
+++ b/docs/scss/layout.scss
@@ -40,6 +40,18 @@ header {
     width: 70px;
     height: 29px;
 
+    ::before {
+        content: '';
+        position: absolute;
+        width: 3px;
+        height: 3px;
+        right: 32%;
+        top: 1px;
+        border-radius: 50%;
+        opacity: 0;
+        transition: .7s;
+    }
+
     &:hover {
         cursor: pointer;
     }
@@ -160,12 +172,6 @@ header {
     }
 }
 
-// .categories:hover {
-//     .currentPage {
-//         background-color: rgb(34, 34, 34);
-//     }
-// }
-
 footer {
     padding: 20px;
     background-color: rgb(36, 36, 36);
@@ -221,8 +227,9 @@ footer {
 
 @media screen and (min-width: 992px) {
     header {
-        min-height: 70px;
+        min-height: 100px;
         box-shadow: none;
+        transition: 1s;
     }
 
     header:hover {
@@ -230,21 +237,34 @@ footer {
             position: relative;
             transform: translateY(-5px);
             transition: .7s;
+
+            ::before {
+                opacity: 1;
+                background-color: #00d70e;
+                transform: scale(1.5);
+            }
         }
     }
 
     header:not(:hover) {
         .logo-container {
             transition: 0.8s .2s;
+
+            ::before {
+                opacity: 1;
+                transition: .7s .5;
+            }
         }
     }
 
     nav {
         width: 478.484px;
-        height: 70px;
+        height: 100px;
+        margin-right: 50px;
         position: fixed;
         right: 5%;
         z-index: 2;
+        transition: 1s;
     }
 
     .hidden-overlay {
@@ -272,9 +292,10 @@ footer {
     }
 
     .ul-wrapper {
+        display: flex;
         position: initial;
         width: auto;
-        height: auto;
+        // height: 100%;
         padding-top: 0;
         background-color: transparent;
 
@@ -286,6 +307,7 @@ footer {
     .categories {
         display: flex;
         transform: none;
+        align-self: center;
 
         a {
             color: rgb(34, 34, 34);
@@ -303,6 +325,7 @@ footer {
     }
 
     .logo-container {
+        margin-left: 50px;
         scale: 1.2;
     }
 }
