--- a/docs/scss/skills.scss
+++ b/docs/scss/skills.scss
@@ -42,7 +42,7 @@
 
 @media screen and (min-width: 768px) {
     .web-skills {
-        padding: 70px 8%;
+        padding: 100px 8% 70px;
 
         h1 {
             font-size: 55px;
